# ch-api

./: .gitignore  .pdm-python  README.md  conftest.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/sources/: api-overview.rst  api-reference.rst  contributing.rst  usage.rst
docs/sources/ch_api/: api.rst  api_settings.rst  exc.rst
docs/sources/ch_api/types/: base.rst  compound_api_types.rst  field_types.rst  index.rst  pagination.rst  public_data.rst  settings.rst  shared.rst  test_data_generator.rst
src/ch_api/: __init__.py  api.py  api_settings.py  exc.py
src/ch_api/types/: __init__.py  base.py  field_types.py  settings.py  shared.py  test_data_generator.py
src/ch_api/types/compound_api_types/: __init__.py
src/ch_api/types/compound_api_types/public_data/: __init__.py  officer_appointments.py  psc.py  (+3 more)
src/ch_api/types/pagination/: __init__.py  paginated_list.py  types.py
src/ch_api/types/public_data/: __init__.py  charges.py  company_officers.py  company_profile.py  company_registers.py  disqualifications.py  documents.py  exemptions.py  filing_history.py  insolvency.py  officer_appointments.py  officer_changes.py  psc.py  registered_office.py  search.py  search_companies.py  uk_establishments.py
tests/: conftest.py
tests/integration/: conftest.py  test_charges.py  test_company_info.py  test_disqualification.py  test_filing_history.py  test_get_company_uk_establishments.py  test_get_exemptions.py  test_get_insolvency.py  test_officer_appointments.py  test_psc.py  test_raw_base.py  test_search_api.py  test_test_endpoints.py
tests/resources/test_charges.py/test_get_ipc_company_charge_details/: charges_hvtzfirvvr6jnb-wvl9vxkruzlm_get_data_0_94caf8fe.json
tests/resources/test_charges.py/test_get_ipc_company_charges/: company_charges_get_data_0_637baa55.json
tests/resources/test_charges.py/test_get_r5e_company_charges/: company_charges_get_data_0_d5301d41.json
tests/resources/test_company_info.py/test_get_company_profile/: company_get_data_0_7ef9c0b7.json
tests/resources/test_company_info.py/test_get_company_registers/: company_registers_get_data_0_b9901ae3.json
tests/resources/test_company_info.py/test_get_company_registers_barclays/: company_registers_get_data_0_6bbb5d54.json
tests/resources/test_company_info.py/test_get_officer_appointment/: appointments_undjhrgedksjtytjkacoku1yapy_get_data_0_6a268900.json
tests/resources/test_company_info.py/test_get_officer_list/: company_officers_get_data_0_items_per_page_20_order_by_appointed_on_start_index_0_a1b5e577.json
tests/resources/test_company_info.py/test_get_registered_office_address/: company_registered-office-address_get_data_0_7a9f9ca3.json
tests/resources/test_disqualification.py/test_corporate_disq/: corporate_dal_5s20vd_n3rszcl92rd4rwom_get_data_0_6e2213e3.json
tests/resources/test_disqualification.py/test_natural_disq/: natural_z5bd9sanuiutsfta5vre6yzla4s_get_data_0_b0dd6b2e.json
tests/test_plugins/mock_session/: __init__.py  cache_filename.py  session.py
tests/unit/: __init__.py  test_api_branch_coverage.py  test_api_client.py  test_api_coverage.py  test_base_model.py  test_field_types.py  test_paginated_list_coverage.py  test_pagination_entity.py  test_shared_types.py
(+167 files in other folders)
